--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/tuangou.css">
+	<link rel="stylesheet" href="css/tuangoujrx.css">
 </head>
 <body>
 	<section class="top">
@@ -55,7 +55,7 @@
 					小米官网
 				</a>
 				<a class="qiyelogo" href="#">
-					企业购
+					
 				</a>
 			</div>
 			<nav class="header-nav">
@@ -79,7 +79,56 @@
 		</div>
 	</header>
 	<section class="home">
-		<div class="container"></div>
+		<div class="container">
+			<div class="banner">
+				<a href="#">
+					<img src="../images/qiyegou.jpg" alt="">
+				</a>
+			</div>
+			<div class="sider">
+				<div class="top">
+					<div class="face">
+						<div class="profile">
+							<h2 class="wenzi">你好，欢迎回来</h2>
+							<a href="#" class="info">登录企业账户开始采购 &gt;</a>
+						</div>
+					</div>
+				</div>
+				<div class="bottom">
+					<h2>企业专属特权</h2>
+					<ul>
+						<li>
+							<div class="img"></div>
+							<div class="text">
+								<p class="tit">专属价格</p>
+								<p class="info">精选货品，专属优惠</p>
+							</div>
+						</li>
+						<li>
+							<div class="img"></div>
+							<div class="text">
+								<p class="tit">专属价格</p>
+								<p class="info">精选货品，专属优惠</p>
+							</div>
+						</li>
+						<li>
+							<div class="img"></div>
+							<div class="text">
+								<p class="tit">专属价格</p>
+								<p class="info">精选货品，专属优惠</p>
+							</div>
+						</li>
+						<li>
+							<div class="img"></div>
+							<div class="text">
+								<p class="tit">专属价格</p>
+								<p class="info">精选货品，专属优惠</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section class="main">
 		<div class="container"></div>
