--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -82,52 +82,55 @@
 		<div class="container">
 			<div class="banner">
 				<a href="#">
-					<img src="../images/qiyegou.jpg" alt="">
+					<img src="images/b.jpg" alt="">
 				</a>
-			</div>
-			<div class="sider">
-				<div class="top">
-					<div class="face">
+				<div class="sider">
+					<div class="top">
+						<div class="face">
+							<img src="images/icon_face.png" alt="">
+						</div>
 						<div class="profile">
 							<h2 class="wenzi">你好，欢迎回来</h2>
 							<a href="#" class="info">登录企业账户开始采购 &gt;</a>
 						</div>
+						
+					</div>
+					<div class="bottom">
+						<h2>企业专属特权</h2>
+						<ul>
+							<li>
+								<div class="img img1"></div>
+								<div class="text">
+									<p class="tit">专属价格</p>
+									<p class="info">精选货品，专属优惠</p>
+								</div>
+							</li>
+							<li>
+								<div class="img"></div>
+								<div class="text">
+									<p class="tit">专属价格</p>
+									<p class="info">精选货品，专属优惠</p>
+								</div>
+							</li>
+							<li>
+								<div class="img"></div>
+								<div class="text">
+									<p class="tit">专属价格</p>
+									<p class="info">精选货品，专属优惠</p>
+								</div>
+							</li>
+							<li>
+								<div class="img"></div>
+								<div class="text">
+									<p class="tit">专属价格</p>
+									<p class="info">精选货品，专属优惠</p>
+								</div>
+							</li>
+						</ul>
+						<a href="#" class="click">没找到想要的？ 请点击&gt;</a>
 					</div>
 				</div>
-				<div class="bottom">
-					<h2>企业专属特权</h2>
-					<ul>
-						<li>
-							<div class="img"></div>
-							<div class="text">
-								<p class="tit">专属价格</p>
-								<p class="info">精选货品，专属优惠</p>
-							</div>
-						</li>
-						<li>
-							<div class="img"></div>
-							<div class="text">
-								<p class="tit">专属价格</p>
-								<p class="info">精选货品，专属优惠</p>
-							</div>
-						</li>
-						<li>
-							<div class="img"></div>
-							<div class="text">
-								<p class="tit">专属价格</p>
-								<p class="info">精选货品，专属优惠</p>
-							</div>
-						</li>
-						<li>
-							<div class="img"></div>
-							<div class="text">
-								<p class="tit">专属价格</p>
-								<p class="info">精选货品，专属优惠</p>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</div>
+			</div>	
 		</div>
 	</section>
 	<section class="main">
