--- a/mi/bijiben.html
+++ b/mi/bijiben.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>小米笔记本</title>
-	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/iconfont.css">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/bjb.css">
+	<link rel="stylesheet" href="css/commonjly.css">
+	<link rel="stylesheet" href="css/iconfontjly.css">
+	<link rel="stylesheet" href="css/resetjly.css">
+	<link rel="stylesheet" href="css/bjbjly.css">
 </head>
 <body>
 	<section class="top">
@@ -50,6 +50,31 @@
 			<li class="dht">服务</li>
 			<li class="dht">社区</li>
 		</ul>
+			<div class="search">
+				<input type="text" class="search-text">
+				<div class="search-btn">
+					<i class="iconfont icon-fangdajing"></i>
+				</div>
+				<div class="search-hot-words">
+					<a class="search-hot-words-item" href="#">小米8</a>
+					<a class="search-hot-words-item" href="#">小米MIX 2S</a>
+				</div>	
+					<div class="search-keyword-list">
+						<ul>
+							<li class="keyword-item"><a href="#"><span class="keyword">小米6X</span><span class="num">约有6件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">小米MIX 2S</span><span class="num">约有5件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">黑鲨游戏手机</span><span class="num">约有3件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">红米Note 5</span><span class="num">约有6件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">红米5A</span><span class="num">约有13件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">小米电视4C</span><span class="num">约有5件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">电视32英寸</span><span class="num">约有3件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">笔记本pro</span><span class="num">约有5件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">空气净化器</span><span class="num">约有11件</span></a></li>
+							<li class="keyword-item"><a href="#"><span class="keyword">净水器</span><span class="num">约有8件</span></a></li>
+						</ul>
+				</div>
+			</div>	
+		</div>	
 	</header>
 	<section class="bod">
 		<ul class="bod-list">
@@ -72,6 +97,7 @@
 			</li>
 			<li class="img-sh">
 				<img src="images/ad5.png" alt="">
+				<img src="images/ad6.png" alt="">
 			</li>
 			<li class="img-bd"></li>
 			<li class="img-if-mx"></li>
