--- a/mi/bijiben.html
+++ b/mi/bijiben.html
@@ -96,8 +96,8 @@
 				</div>
 			</li>
 			<li class="img-sh">
-				<img src="images/ad5.png" alt="">
-				<img src="images/ad6.png" alt="">
+				<div class="img-sh1"><img src="images/ad5.png" alt=""></div>
+				<div class="img-sh2"><img src="images/ad6.png" alt=""></div>
 			</li>
 			<li class="img-bd"></li>
 			<li class="img-if-mx"></li>
