--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -42,8 +42,6 @@
 				<ul>
 					<li class="user-info-item"><a href="#">登录</a><span class="sep">|</span></li>
 					<li class="user-info-item"><a href="#">注册</a>
-
-
 				</ul>
 			</div>
 		</div>
@@ -60,11 +58,11 @@
 			</div>
 			<nav class="header-nav">
 				<ul>
-					<li class="header-nav-item"><a href="#">手机·平板·笔记本</a></li>
+					<li class="header-nav-item"><a href="#">手机 • 平板 ▪ 笔记本</a></li>
 					<li class="header-nav-item"><a href="#">电视</a></li>
-					<li class="header-nav-item"><a href="#">小米盒子·路由器</a></li>
+					<li class="header-nav-item"><a href="#">小米盒子 ▪ 路由器</a></li>
 					<li class="header-nav-item"><a href="#">智能硬件</a></li>
-					<li class="header-nav-item"><a href="#">耳机·音箱</a></li>
+					<li class="header-nav-item"><a href="#">耳机 ▪ 音箱</a></li>
 					<li class="header-nav-item"><a href="#">配件</a></li>
 					<li class="header-nav-item"><a href="#">生活周边</a></li>
 					<li class="header-nav-item"><a href="#">礼品卡</a></li>
@@ -85,7 +83,7 @@
 					<img src="images/b.jpg" alt="">
 				</a>
 				<div class="sider">
-					<div class="top">
+					<div class="sider-top">
 						<div class="face">
 							<img src="images/icon_face.png" alt="">
 						</div>
@@ -93,9 +91,8 @@
 							<h2 class="wenzi">你好，欢迎回来</h2>
 							<a href="#" class="info">登录企业账户开始采购 &gt;</a>
 						</div>
-						
 					</div>
-					<div class="bottom">
+					<div class="sider-bottom">
 						<h2>企业专属特权</h2>
 						<ul>
 							<li>
@@ -108,22 +105,22 @@
 							<li>
 								<div class="img"></div>
 								<div class="text">
-									<p class="tit">专属价格</p>
-									<p class="info">精选货品，专属优惠</p>
+									<p class="tit">自主开票</p>
+									<p class="info">全场商品，增票开具</p>
 								</div>
 							</li>
 							<li>
 								<div class="img"></div>
 								<div class="text">
-									<p class="tit">专属价格</p>
-									<p class="info">精选货品，专属优惠</p>
+									<p class="tit">便捷支付</p>
+									<p class="info">对公转帐，票款一致</p>
 								</div>
 							</li>
 							<li>
 								<div class="img"></div>
 								<div class="text">
-									<p class="tit">专属价格</p>
-									<p class="info">精选货品，专属优惠</p>
+									<p class="tit">专业售后</p>
+									<p class="info">小米直供，售后无忧</p>
 								</div>
 							</li>
 						</ul>
@@ -131,10 +128,382 @@
 					</div>
 				</div>
 			</div>	
+			<div class="hot">
+				<ul class="hot-list clearfix">
+					<li>
+						<a href="#"><img src="images/ad1.jpg" alt=""></a>
+					</li>
+					<li>
+						<a href="#"><img src="images/ad2.jpg" alt=""></a>
+					</li>
+					<li>
+						<a href="#"><img src="images/ad3.jpg" alt=""></a>
+					</li>
+					<li>
+						<a href="#"><img src="images/ad4.jpg" alt=""></a>
+					</li>
+				</ul>
+			</div>
 		</div>
 	</section>
 	<section class="main">
-		<div class="container"></div>
+		<div class="container">
+			<div class="phone">
+				<div class="hd">
+					<h2 class="title">手机•平板▪笔记本</h2>
+					<div class="more">
+						<a href="#">
+							查看全部<i class="iconfont">&#xe623;</i>
+						</a>
+					</div>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/ph1.jpg" alt="">
+							</a>
+							<h3 class="title">小米8 全网通版 6GB+256GB</h3>
+							<p class="desc">小米8 全网通版 6GB内存 256GB</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/ph2.jpg" alt="">
+							</a>
+							<h3 class="title">小米平板4 Plus 10英寸 LTE版 </h3>
+							<p class="desc">小米平板4 Plus 10英寸 LTE版 </p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/ph3.jpg" alt="">
+							</a>
+							<h3 class="title">小米MIX 3</h3>
+							<p class="desc">小米MIX 3</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/ph4.jpg" alt="">
+							</a>
+							<h3 class="title">小米8 SE 全网通版 6GB+128GB</h3>
+							<p class="desc">小米8 SE 全网通版 6GB内存 128GB</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/ph5.jpg" alt="">
+							</a>
+							<h3 class="title">小米平板4</h3>
+							<p class="desc">小米平板4 8英寸WIFI版 4GB内存</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="dianshi">
+				<div class="hd">
+					<h2 class="title">电视</h2>
+					<div class="more">
+						<a href="#">
+							查看全部<i class="iconfont">&#xe623;</i>
+						</a>
+					</div>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/el1.jpg" alt="">
+							</a>
+							<h3 class="title">小米电视4 75英寸</h3>
+							<p class="desc">小米电视4 75英寸</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/el2.jpg" alt="">
+							</a>
+							<h3 class="title">小米电视4A 40英寸</h3>
+							<p class="desc">小米电视4A 40英寸</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/el3.jpg" alt="">
+							</a>
+							<h3 class="title">小米电视4X 43英寸</h3>
+							<p class="desc">小米电视4X 43英寸</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/el4.png" alt="">
+							</a>
+							<h3 class="title">小米电视4 65英寸全面屏旗舰版</h3>
+							<p class="desc">小米电视4 65英寸全面屏旗舰版</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/el5.jpg" alt="">
+							</a>
+							<h3 class="title">小米电视4S 65英寸 PRO</h3>
+							<p class="desc">小米电视4S 65英寸 PRO</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="mibox">
+				<div class="hd">
+					<h2 class="title">小米盒子 ▪ 路由器</h2>
+					<div class="more">
+						<a href="#">
+							查看全部<i class="iconfont">&#xe623;</i>
+						</a>
+					</div>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/luyouqi.jpg" alt="">
+							</a>
+							<h3 class="title">小米路由器4Q</h3>
+							<p class="desc">小米路由器4Q</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/luyouqi.jpg" alt="">
+							</a>
+							<h3 class="title">小米路由器4Q</h3>
+							<p class="desc">小米路由器4Q</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/luyouqi.jpg" alt="">
+							</a>
+							<h3 class="title">小米路由器4Q</h3>
+							<p class="desc">小米路由器4Q</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/luyouqi.jpg" alt="">
+							</a>
+							<h3 class="title">小米路由器4Q</h3>
+							<p class="desc">小米路由器4Q</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/luyouqi.jpg" alt="">
+							</a>
+							<h3 class="title">小米路由器4Q</h3>
+							<p class="desc">小米路由器4Q</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="zhineng">
+				<div class="hd">
+					<h2 class="title">智能硬件</h2>
+					<div class="more">
+						<a href="#">
+							查看全部<i class="iconfont">&#xe623;</i>
+						</a>
+					</div>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/zhineng.png" alt="">
+							</a>
+							<h3 class="title">小米VR一体机 白色</h3>
+							<p class="desc">小米VR一体机 白色</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/zhineng.png" alt="">
+							</a>
+							<h3 class="title">小米VR一体机 白色</h3>
+							<p class="desc">小米VR一体机 白色</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/zhineng.png" alt="">
+							</a>
+							<h3 class="title">小米VR一体机 白色</h3>
+							<p class="desc">小米VR一体机 白色</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/zhineng.png" alt="">
+							</a>
+							<h3 class="title">小米VR一体机 白色</h3>
+							<p class="desc">小米VR一体机 白色</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/zhineng.png" alt="">
+							</a>
+							<h3 class="title">小米VR一体机 白色</h3>
+							<p class="desc">小米VR一体机 白色</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						
+					</ul>
+				</div>
+			</div>
+			<div class="erji">
+				<div class="hd">
+					<h2 class="title">耳机 ▪ 音箱</h2>
+					<div class="more">
+						<a href="#">
+							查看全部<i class="iconfont">&#xe623;</i>
+						</a>
+					</div>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/erji.jpg" alt="">
+							</a>
+							<h3 class="title">小米头戴式蓝牙耳机</h3>
+							<p class="desc">小米头戴式蓝牙耳机</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/erji.jpg" alt="">
+							</a>
+							<h3 class="title">小米头戴式蓝牙耳机</h3>
+							<p class="desc">小米头戴式蓝牙耳机</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/erji.jpg" alt="">
+							</a>
+							<h3 class="title">小米头戴式蓝牙耳机</h3>
+							<p class="desc">小米头戴式蓝牙耳机</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/erji.jpg" alt="">
+							</a>
+							<h3 class="title">小米头戴式蓝牙耳机</h3>
+							<p class="desc">小米头戴式蓝牙耳机</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/erji.jpg" alt="">
+							</a>
+							<h3 class="title">小米头戴式蓝牙耳机</h3>
+							<p class="desc">小米头戴式蓝牙耳机</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="peijian">
+				<div class="hd">
+					<h2 class="title">配件</h2>
+					<div class="more">
+						<a href="#">
+							查看全部<i class="iconfont">&#xe623;</i>
+						</a>
+					</div>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/peijian.jpg" alt="">
+							</a>
+							<h3 class="title">小米蓝牙电脑音箱</h3>
+							<p class="desc">小米蓝牙电脑音箱</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/peijian.jpg" alt="">
+							</a>
+							<h3 class="title">小米蓝牙电脑音箱</h3>
+							<p class="desc">小米蓝牙电脑音箱</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li><li>
+							<a href="#" class="thumb">
+								<img src="images/peijian.jpg" alt="">
+							</a>
+							<h3 class="title">小米蓝牙电脑音箱</h3>
+							<p class="desc">小米蓝牙电脑音箱</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li><li>
+							<a href="#" class="thumb">
+								<img src="images/peijian.jpg" alt="">
+							</a>
+							<h3 class="title">小米蓝牙电脑音箱</h3>
+							<p class="desc">小米蓝牙电脑音箱</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li><li>
+							<a href="#" class="thumb">
+								<img src="images/peijian.jpg" alt="">
+							</a>
+							<h3 class="title">小米蓝牙电脑音箱</h3>
+							<p class="desc">小米蓝牙电脑音箱</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="lipinka">
+				<div class="hd">
+					<h2 class="title">礼品卡</h2>
+				</div>
+				<div class="bd">
+					<ul class="bd-list clearfix">
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/lipinka.jpg" alt="">
+							</a>
+							<h3 class="title">小米礼品卡（电子卡）1000元</h3>
+							<p class="desc">电子卡无需寄运，即买即用</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/lipinka.jpg" alt="">
+							</a>
+							<h3 class="title">小米礼品卡（电子卡）1000元</h3>
+							<p class="desc">电子卡无需寄运，即买即用</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+						<li>
+							<a href="#" class="thumb">
+								<img src="images/lipinka.jpg" alt="">
+							</a>
+							<h3 class="title">小米礼品卡（电子卡）1000元</h3>
+							<p class="desc">电子卡无需寄运，即买即用</p>
+							<a href="#" class="btn">登录企业账户开始采购</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>	
 	</section>
 	<footer class="footer">
 		<div class="container"></div>
