--- a/mi/ertongzsc.html
+++ b/mi/ertongzsc.html
@@ -51,7 +51,8 @@
 			</h1>
 			<nav class="header-nav">
 				<ul>
-					<li class="header-nav-item"><a href="" herf="#">全部分类</a></li>
+					<li class="header-nav-item"><a href="" herf="#">全部分类</a>
+					</li>
 					<li class="header-nav-item"><a href="" herf="#">小米</a></li>
 					<li class="header-nav-item"><a href="" herf="#">红米</a></li>
 					<li class="header-nav-item"><a href="" herf="#">电视</a></li>
