--- a/mi/tuangoujrx.html
+++ b/mi/tuangoujrx.html
@@ -103,21 +103,21 @@
 								</div>
 							</li>
 							<li>
-								<div class="img"></div>
+								<div class="img img2"></div>
 								<div class="text">
 									<p class="tit">自主开票</p>
 									<p class="info">全场商品，增票开具</p>
 								</div>
 							</li>
 							<li>
-								<div class="img"></div>
+								<div class="img img3"></div>
 								<div class="text">
 									<p class="tit">便捷支付</p>
 									<p class="info">对公转帐，票款一致</p>
 								</div>
 							</li>
 							<li>
-								<div class="img"></div>
+								<div class="img img4"></div>
 								<div class="text">
 									<p class="tit">专业售后</p>
 									<p class="info">小米直供，售后无忧</p>
@@ -506,10 +506,120 @@
 		</div>	
 	</section>
 	<footer class="footer">
-		<div class="container"></div>
+		<div class="container">
+			<h2>采购流程</h2>
+			<p>采购仅需4步，2个工作日内完成审核，到账后5个工作日内发货</p>
+			<div class="step"></div>
+		</div>
 	</footer>
 	<section class="end">
-		<div class="container"></div>
+		<div class="container">
+			<div class="service">
+				<ul class="clearfix">
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe630;</i>
+							新浪微博
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe635;</i>
+							小米部落
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe608;</i>
+							官方微信
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe638;</i>
+							24小时在线客服
+						</a>
+					</li>
+					<li class="service-item">
+						<a href="#">
+							<i class="iconfont">&#xe637;</i>
+							400-100-5678
+						</a>
+					</li>					
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section class="end2">
+		<div class="container">
+			<div class="info clearfix">
+				<div class="logo"></div>
+				<div class="site">
+					<p class="nav-link">
+						<a href="#">小米商城</a>
+						<span class="sep"></span>
+						<a href="#">MIUI</a>
+						<span class="sep"></span>
+						<a href="#">米家</a>
+						<span class="sep"></span>
+						<a href="#">米聊</a>
+						<span class="sep"></span>
+						<a href="#">多看</a>
+						<span class="sep"></span>
+						<a href="#">路由器</a>
+						<span class="sep"></span>
+						<a href="#">游戏</a>
+						<span class="sep"></span>
+						<a href="#">米粉卡</a>
+						<span class="sep"></span>
+						<a href="#">政企服务</a>
+						<span class="sep"></span>
+						<a href="#">小米天猫店</a>
+						<span class="sep"></span>
+						<a href="#">小米天猫店</a>
+						<span class="sep"></span>
+						<a href="#">隐私政策</a>
+						<span class="sep"></span>
+						<a href="#">问题反馈</a>
+						<span class="sep"></span>
+						<a href="#">廉政举报</a>
+						<span class="sep"></span>
+						<a href="#">Select Region</a>
+					</p>
+					<p class="icp">
+						<a href="#">mi.com </a>
+						<a href="#">京ICP证110507号 </a>
+						<a href="#">京ICP备10046444号 </a>
+						<a href="#">京ICP备10046444号 </a>
+						<a href="#">京ICP备10046444号 </a>
+					</p>
+					<p class="icp">
+						<a href="#">（京）网械平台备字（2018）第00005号 </a>
+						<a href="#">互联网药品信息服务资格证 (京) -非经营性-2014-0090 </a>
+						<a href="#">营业执照 </a>
+					</p>
+					<p class="decare">违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
+				</div>
+				<div class="links">
+					<a href="#">
+						<img src="images/truste.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-1.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-2.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-3.png" alt="">
+					</a>
+					<a href="#">
+						<img src="images/v-logo-4.png" alt="">
+					</a>			
+				</div>
+			</div>
+			<div class="slogan"></div>
+		</div>
 	</section>
 </body>
 </html>
