小米笔记本页面完成度90%

--- a/mi/bijiben.html
+++ b/mi/bijiben.html
@@ -144,19 +144,19 @@
 		<div class="container">
 			<div class="service">
 				<ul class="clearfix">
-					<li class="service-item"><a href="#"><i class="iconfont">&#xe634;</i>预约维修服务</a></li>
-					<li class="service-item"><a href="#"><i class="iconfont">&#xe635;</i>7天无理由退货</a></li>
-					<li class="service-item"><a href="#"><i class="iconfont">&#xe636;</i>15天免费换货</a></li>
-					<li class="service-item"><a href="#"><i class="iconfont">&#xe638;</i>满150元包邮</a></li>
-					<li class="service-item"><a href="#"><i class="iconfont">&#xe637;</i>520余家售后网点</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont icon-buoumaotubiao46"></i>预约维修服务</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont icon-7day"></i>7天无理由退货</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont icon-15tianwuliyoutuihuo"></i>15天免费换货</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont icon-liwu"></i>满150元包邮</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont icon-didian1"></i>520余家售后网点</a></li>
 				</ul>
 			</div>
 			<div class="links">
 				<dl class="links-item">
-					<dt>服务支持</dt>
-					<dd><a href="#">售后政策</a></dd>
-					<dd><a href="#">自助服务</a></dd>
-					<dd><a href="#">相关下载</a></dd>
+					<dt>帮助中心</dt>
+					<dd><a href="#">账户管理</a></dd>
+					<dd><a href="#">订购指南</a></dd>
+					<dd><a href="#">订单操作</a></dd>
 				</dl>
 				<dl class="links-item">
 					<dt>服务支持</dt>
@@ -165,22 +165,22 @@
 					<dd><a href="#">相关下载</a></dd>
 				</dl>
 				<dl class="links-item">
-					<dt>服务支持</dt>
-					<dd><a href="#">售后政策</a></dd>
-					<dd><a href="#">自助服务</a></dd>
-					<dd><a href="#">相关下载</a></dd>
+					<dt>线下门店</dt>
+					<dd><a href="#">小米之家</a></dd>
+					<dd><a href="#">服务网点</a></dd>
+					<dd><a href="#">授权体验店</a></dd>
 				</dl>
 				<dl class="links-item">
-					<dt>服务支持</dt>
-					<dd><a href="#">售后政策</a></dd>
-					<dd><a href="#">自助服务</a></dd>
-					<dd><a href="#">相关下载</a></dd>
+					<dt>关于小米</dt>
+					<dd><a href="#">了解小米</a></dd>
+					<dd><a href="#">加入小米</a></dd>
+					<dd><a href="#">投资者关系</a></dd>
 				</dl>
 				<dl class="links-item">
-					<dt>服务支持</dt>
-					<dd><a href="#">售后政策</a></dd>
-					<dd><a href="#">自助服务</a></dd>
-					<dd><a href="#">相关下载</a></dd>
+					<dt>关注我们</dt>
+					<dd><a href="#">新浪微博</a></dd>
+					<dd><a href="#">官方微信</a></dd>
+					<dd><a href="#">联系我们</a></dd>
 				</dl>
 				<dl class="links-item">
 					<dt>特色服务</dt>
@@ -193,7 +193,7 @@
 					<p class="work-time">周一至周日 8:00-18:00</p>
 					<p class="desc">（仅收市话费）</p>
 					<div class="call">
-						<a href="#"><i class="iconfont">&#xe600;</i>在线客服</a>
+						<a href="#"><i class="iconfont"></i>在线客服</a>
 					</div>
 				</div>
 			</div>
