--- a/mi/fuwuzsc.html
+++ b/mi/fuwuzsc.html
@@ -103,8 +103,85 @@
 		</ul>
 	</section>
 	<section class="main container">
-		<div class="top"></div>
-		<div class="bottom"></div>
+		<div class="top ">
+			<h2>自助服务</h2>
+			<div class="box">
+				<img src="imgzsc/f1.png" alt="">
+				<a href="#" class="list-name">申请售后服务</a>
+				<p class="list-desc">一键预约，快速维修</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f2.png" alt="">
+				<a href="#" class="list-name">订单查询</a>
+				<p class="list-desc">购物信息，快速搜索</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f3.png" alt="">
+				<a href="#" class="list-name">小米账户</a>
+				<p class="list-desc">重置密保，安全认证</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f4.png" alt="">
+				<a href="#" class="list-name">保障服务</a>
+				<p class="list-desc">碎屏延保，双重保障</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f5.png" alt="">
+				<a href="#" class="list-name">以旧换新</a>
+				<p class="list-desc">便捷交易，价格保障</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f6.png" alt="">
+				<a href="#" class="list-name">付费服务</a>
+				<p class="list-desc">安装服务，手机维修</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f7.png" alt="">
+				<a href="#" class="list-name">售后服务</a>
+				<p class="list-desc">条款说明，安心保障</p>
+			</div>
+			<div class="box">
+				<img src="imgzsc/f8.png" alt="">
+				<a href="#" class="list-name">查辨真伪</a>
+				<p class="list-desc">辨别真伪，放心使用</p>
+			</div>
+		</div>
+		<div class="bottom">
+			<div class="top ">
+			<h2>自助服务</h2>
+			<div class="box">
+				<img src="imgzsc/c1.jpg" alt="">
+				<a href="#" class="list-name">申请售后服务</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c2.png" alt="">
+				<a href="#" class="list-name">订单查询</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c3.jpg" alt="">
+				<a href="#" class="list-name">小米账户</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c4.jpg" alt="">
+				<a href="#" class="list-name">保障服务</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c5.jpg" alt="">
+				<a href="#" class="list-name">以旧换新</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c6.jpg" alt="">
+				<a href="#" class="list-name">付费服务</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c7.jpg" alt="">
+				<a href="#" class="list-name">售后服务</a>
+			</div>
+			<div class="box">
+				<img src="imgzsc/c8.jpg" alt="">
+				<a href="#" class="list-name">查辨真伪</a>
+			</div>
+		</div>
 	</section>
 	<section class="service container">
 		<div class="box1"></div>
