--- a/mi/fuwuzsc.html
+++ b/mi/fuwuzsc.html
@@ -188,9 +188,119 @@
 		<div class="box2"></div>
 	</section>
 	<section class="contact container"></section>
+<section class="end">
+		<div class="container">
+			<div class="service">
+				<ul class="clearfix">
+					<li class="service-item"><a href="#"><i class="iconfont">&#xe634;</i>预约维修服务</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont">&#xe635;</i>7天无理由退货</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont">&#xe636;</i>15天免费换货</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont">&#xe638;</i>满150元包邮</a></li>
+					<li class="service-item"><a href="#"><i class="iconfont">&#xe637;</i>520余家售后网点</a></li>
+				</ul>
+			</div>
+			<div class="links">
+				<dl class="links-item">
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="#">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
+				</dl>
+				<dl class="links-item">
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="#">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
+				</dl>
+				<dl class="links-item">
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="#">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
+				</dl>
+				<dl class="links-item">
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="#">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
+				</dl>
+				<dl class="links-item">
+					<dt>服务支持</dt>
+					<dd><a href="#">售后政策</a></dd>
+					<dd><a href="#">自助服务</a></dd>
+					<dd><a href="#">相关下载</a></dd>
+				</dl>
+				<dl class="links-item">
+					<dt>特色服务</dt>
+					<dd><a href="#">F 码通道</a></dd>
+					<dd><a href="#">礼物码</a></dd>
+					<dd><a href="#">防伪查询</a></dd>
+				</dl>
+				<div class="links-contact">
+					<p class="phone-nub">400-100-5678</p>
+					<p class="work-time">周一至周日 8:00-18:00</p>
+					<p class="desc">（仅收市话费）</p>
+					<div class="call">
+						<a href="#"><i class="iconfont">&#xe600;</i>在线客服</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
+	<footer class="footer">
+			<div class="container">
+				<div class="info">
+					<div class="logo"><a href="#">小米官网</a></div>
+					<div class="a1">
+						<p class="a1-item">
+							<a href="#">小米商城</a>
+							<a href="#">MIUI</a>
+							<a href="#">米家</a>
+							<a href="#">米聊</a>
+							<a href="#">多看</a>
+							<a href="#">游戏</a>
+							<a href="#">路由器</a>
+							<a href="#">米粉卡</a>
+							<a href="#">政企服务</a>
+							<a href="#">小米天猫店</a>
+							<a href="#">隐私政策</a>
+							<a href="#">问题反馈</a>
+							<a href="#">廉正举报</a>
+							<a href="#">Select Region</a>
+						</p>	
+						<p class="icp">
+							<a href="#">© mi.com</a>
+							<a href="#">京ICP证110507号</a> 
+							<a href="#">京ICP备10046444号</a> 
+							<a href="#">京公网安备11010802020134号 </a>
+							<a href="#">京网文[2017]1530-131号</a></br>
+							违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试
+						</p>
+					</div>
+					<div class="a2-item">
+						<a href="#"><img src="imgzsc/truste.png" alt=""></a>
+						<a href="#"><img src="imgzsc/v-logo-1.png" alt=""></a>
+						<a href="#"><img src="imgzsc/v-logo-2.png" alt=""></a>
+						<a href="#"><img src="imgzsc/v-logo-3.png" alt=""></a>
+						<a href="#"><img src="imgzsc/v.png" alt=""></a>
+					</div>
+				</div>
+				<div class="foot"></div>
+			</div>	
+		</footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
 
 
 
