--- a/mi/servicejrx.html
+++ b/mi/servicejrx.html
@@ -106,7 +106,29 @@
 		</div>
 	</header>
 	<section class="home">
-		<div class="container"></div>
+		<div class="container">
+			<div class="bread">
+				<a href="#">首页</a>
+				<span class="sep">/</span>
+				<a href="#">帮助中心</a>
+			</div>
+			<div class="carousel">
+				<div class="viewport">
+					<div class="index-header">
+						<a href="#" class="sider"><img src="images/c1.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="images/c2.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="images/c1.jpg" alt=""></a>
+						<a href="#" class="sider"><img src="images/c2.jpg" alt=""></a>
+					</div>
+				</div>
+				<div class="controls">
+					<ul class="controls-list">
+						<li class="controls-list-item"><a href="#"></a></li>
+						<li class="controls-list-item"><a href="#"></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</section>
 	<footer class="footer">
 		<div class="container"></div>
